--- a/config/config.ini
+++ b/config/config.ini
@@ -10,11 +10,16 @@ Level=debug
 Threads=1
 # Max events in the queue
 QueueSize=100000
+# Auditd raw Queue push timeout in milliseconds ()
+# - a high number will result in a fully synchronized (not loosy) operation, 
+#   this is very useful for parsing logs.
+# - 0 will automatic discard lines when the queue is full (default behaviour)
+QueuePushTimeoutInMS=0
 # Max time (in milliseconds) to order socket/database flush if no event has inserted in the queue
 EventsFlushTimeoutInMSecs=10000
 
 ########################################################
-# Garbage Collector
+# Garbage Collector for Auditd EVENT reconstruction timeout
 [GC]
 # Max incomplete stored auditd events time
 AuditMaxAgeInSecs=10
@@ -60,3 +65,7 @@ Port=18200
 TimeoutSecs=10
 # Sleep time (in seconds) when a connection failed to attempt a new connection
 ReconnectSleepTimeInSecs=3
+# Max Auditd JSON Queued events
+MaxQueuedItems=500000    
+# Auditd JSON Queue push timeout in milliseconds (0 for automatic discard when the queue is full)
+QueuePushTimeoutInMS=0
