--- a/config/config.ini
+++ b/config/config.ini
@@ -4,6 +4,13 @@
 Level=debug
 
 ########################################################
+# Application Status Monitoring
+[Stats]
+Enabled=true
+OutputDir=/var/log/uauditdanalyzer/stats
+RefreshTimeInSecs=1
+
+########################################################
 # Output Queue Processor 
 [Processor]
 # connection threads (will make n-output connections)
