Default config: wait 100ms for incomming queue / per event

--- a/config/config.ini
+++ b/config/config.ini
@@ -20,8 +20,8 @@ QueueSize=100000
 # Auditd raw Queue push timeout in milliseconds ()
 # - a high number will result in a fully synchronized (not loosy) operation, 
 #   this is very useful for parsing logs.
-# - 0 will automatic discard lines when the queue is full (default behaviour)
-QueuePushTimeoutInMS=0
+# - 0 will automatic discard lines when the queue is full
+QueuePushTimeoutInMS=100
 # Max time (in milliseconds) to order socket/database flush if no event has inserted in the queue
 EventsFlushTimeoutInMSecs=10000
 
