NEW: ExecAndAbort option in the config

--- a/config/rules/level0-3_alerts.ini
+++ b/config/rules/level0-3_alerts.ini
@@ -8,7 +8,7 @@
 # - numbers
 # - "strings" quoted strings...
 Filter=ISTARTS_WITH($.INFO.key,"L0") || ISTARTS_WITH($.INFO.key,"L1") || ISTARTS_WITH($.INFO.key,"L2") || ISTARTS_WITH($.INFO.key,"L3")
-# Actions: EXEC, ABORT
+# Actions: EXEC, ABORT, EXECANDABORT
 Action=EXEC
 ActionBin=/usr/bin/sendxmppcmd.sh
 ActionArgument[0]=sendxmppcmd.sh
