--- a/config/config.ini
+++ b/config/config.ini
@@ -40,6 +40,7 @@ GCPeriodInSecs=5
 # Input type: Auditd log via rsyslog+tcp (with syslog header)
 [INPUT/SYSLOG]
 Enabled=true
+ReceiveIP=false
 # Listen Address
 ListenAddr=0.0.0.0
 # Listen Port
