--- a/systemd/uauditanalyzer.service
+++ b/systemd/uauditanalyzer.service
@@ -4,7 +4,7 @@ Description=Unmanarc's Auditd Analyzer
 [Service]
 Type=simple
 Environment="LD_LIBRARY_PATH=/opt/analyzer/lib"
-ExecStart=/opt/analyzer/bin/uAuditAnalyzer -c /opt/analyzer/etc/config.ini -r /opt/analyzer/etc/rules
+ExecStart=/opt/analyzer/bin/uAuditAnalyzer -c /opt/analyzer/etc/config.ini -r /opt/analyzer/etc/rules -a /opt/analyzer/etc/actions
 
 [Install]
 WantedBy=multi-user.target
