--- a/config/actions/sendxmpp.ini
+++ b/config/actions/sendxmpp.ini
@@ -16,5 +16,5 @@ Argv[7]=> PPID=%-.SYSCALL[*].ppid%
 Argv[8]=> CONTEXT=%-.SYSCALL[*].subj%
 Argv[9]=> SES=%-.SYSCALL[*].ses%
 Argv[10]=Executing %-.PROCTITLE[*].proctitle% 
-Argv[11]=-------------------------------
+Argv[11]=%%-------------------------------%%
 AppendNewLineToEarchArgv=true
