Example for raw...

--- a/config/actions/sendxmpp.ini
+++ b/config/actions/sendxmpp.ini
@@ -18,3 +18,14 @@ Argv[9]=> SES=%-.SYSCALL[*].ses%
 Argv[10]=Executing %-.PROCTITLE[*].proctitle% 
 Argv[11]=%%-------------------------------%%
 AppendNewLineToEarchArgv=true
+
+[SendXMPP-RAW]
+PathName=/usr/bin/sendxmppcmd.sh
+Argv[0]=sendxmppcmd.sh
+Argv[1]=~~  *%-.INFO.time%*  ~~
+Argv[2]=- RAW ---- %#rule.name% ---- RAW -
+Argv[3]=ID=%-.INFO.unixTime%.%-.INFO.msecs%:%-.INFO.id%
+Argv[4]=HOST=*%-.INFO.host%*
+Argv[5]=JSON:
+Argv[6]=> %$.%
+AppendNewLineToEarchArgv=true
