--- a/config/rules/level0-3_alerts.ini
+++ b/config/rules/level0-3_alerts.ini
@@ -1,7 +1,7 @@
 [Level 0-3 Alerts]
 # Comparison functions Available:
 # IS_EQUAL, REGEX_MATCH, CONTAINS, STARTS_WITH, ENDS_WITH
-# then, you can prepend I for insensitive case operations: IIS_EQUAL, IREGEX_MATCH, ICONTAINS, ISTARTS_WITH, IENDS_WITH
+# then, you can prepend i for insensitive case operations: iIS_EQUAL, iREGEX_MATCH, iCONTAINS, iSTARTS_WITH, iENDS_WITH
 # and/or prepend ! for negation !IREGEX_MATCH = Not contains regular expression (insensitive case)
 # As function argument you can use:
 # - $ for JSON Path resolution.
