NEW: Option to enforce Max Age in GC (don't use heuristics)

--- a/config/config.ini
+++ b/config/config.ini
@@ -28,10 +28,12 @@ EventsFlushTimeoutInMSecs=10000
 ########################################################
 # Garbage Collector for Auditd EVENT reconstruction timeout
 [GC]
+# Use Max age for every event (will consume more memory), or pass when considered done by the heuristic (could slipt events)
+EnforceMaxAge=true
 # Max incomplete stored auditd events time
-AuditMaxAgeInSecs=10
+AuditMaxAgeInSecs=4
 # GC Period (in seconds)
-GCPeriodInSecs=5
+GCPeriodInSecs=2
 
 ###########################################################################################
 ####################################### INPUT #############################################
