--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,18 @@
 .settings/*
 aclocal.m4
 autom4te.cache/*
+
+config.hin
+config.h
+.qmake.stash
+config.log
+config.status
+compile
+libtool
+Makefile
+src/Makefile
+
 config.guess
-config.h.in
 config.sub
 configure
 depcomp
@@ -13,6 +23,9 @@ install-sh
 missing
 Makefile.in
 ltmain.sh
+*/*/.*
+*/.*
+.lib*
 
 *.user*
 
@@ -44,3 +57,6 @@ ltmain.sh
 *.exe
 *.out
 *.app
+
+# Autosave Files
+*.autosave
