--- a/uanlz_web/CMakeLists.txt
+++ b/uanlz_web/CMakeLists.txt
@@ -25,21 +25,21 @@ if (EXTRAPREFIX)
     target_link_libraries(${APP_NAME} "-L${EXTRAPREFIX}/lib64")
 endif()
 
-target_link_libraries(${APP_NAME} "-lcx2_xrpc_fast")
-target_link_libraries(${APP_NAME} "-lcx2_xrpc_webserver")
-target_link_libraries(${APP_NAME} "-lcx2_xrpc_common")
-target_link_libraries(${APP_NAME} "-lcx2_netp_http")
-target_link_libraries(${APP_NAME} "-lcx2_netp_mime")
-target_link_libraries(${APP_NAME} "-lcx2_thr_threads")
-target_link_libraries(${APP_NAME} "-lcx2_thr_safecontainers")
-target_link_libraries(${APP_NAME} "-lcx2_net_sockets")
-target_link_libraries(${APP_NAME} "-lcx2_prg_service")
-target_link_libraries(${APP_NAME} "-lcx2_prg_logs")
-target_link_libraries(${APP_NAME} "-lcx2_auth")
-target_link_libraries(${APP_NAME} "-lcx2_auth_remote")
-target_link_libraries(${APP_NAME} "-lcx2_thr_mutex")
-target_link_libraries(${APP_NAME} "-lcx2_mem_vars")
-target_link_libraries(${APP_NAME} "-lcx2_hlp_functions")
+target_link_libraries(${APP_NAME} "-lmdz_xrpc_fast")
+target_link_libraries(${APP_NAME} "-lmdz_xrpc_webserver")
+target_link_libraries(${APP_NAME} "-lmdz_xrpc_common")
+target_link_libraries(${APP_NAME} "-lmdz_proto_http")
+target_link_libraries(${APP_NAME} "-lmdz_proto_mime")
+target_link_libraries(${APP_NAME} "-lmdz_thr_threads")
+target_link_libraries(${APP_NAME} "-lmdz_thr_safecontainers")
+target_link_libraries(${APP_NAME} "-lmdz_net_sockets")
+target_link_libraries(${APP_NAME} "-lmdz_prg_service")
+target_link_libraries(${APP_NAME} "-lmdz_prg_logs")
+target_link_libraries(${APP_NAME} "-lmdz_auth")
+target_link_libraries(${APP_NAME} "-lmdz_auth_remote")
+target_link_libraries(${APP_NAME} "-lmdz_thr_mutex")
+target_link_libraries(${APP_NAME} "-lmdz_mem_vars")
+target_link_libraries(${APP_NAME} "-lmdz_hlp_functions")
 
 target_link_libraries(${APP_NAME} "-lpthread")
 target_link_libraries(${APP_NAME} "-lssl")
