--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 set(SVERSION 2.1.1)
-project(uAuditAnalyzer)
+project(uAuditAnalyzer2)
 project(${PROJECT_NAME} VERSION ${SVERSION} DESCRIPTION "Unmanarc's Audit Analyzer")
 
 ADD_SUBDIRECTORY(uanlz_alert)
